Google sites verification.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Michael Comella's Home Page</title>
   <base target="_blank">
+  <meta name="google-site-verification" content="CirUfL-R7Ukr5vxRVvqwcDkZTAzyNhP7dXMlJnKb4NU" />
 </head>
 <body>
 <div style="height:100px">
