--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!doctype html>
-<html>
+<html lang="en-us">
 <head>
-  <title>Michael Comella's Home Page</title>
-  <base target="_blank">
+  <meta charset="utf-8" />
+  <meta name="author" content="Michael Comella" />
+  <meta name="description" content="Personal page of Michael Comella (mcomella), developer and student at Brown University." />
+  <meta name="keywords" content="student, developer, michael, comella, mcomella" />
   <meta name="google-site-verification" content="CirUfL-R7Ukr5vxRVvqwcDkZTAzyNhP7dXMlJnKb4NU" />
+
+  <link rel="stylesheet" type="text/css" href="css/style.css" />
+
+  <title>mcomella</title>
+
+  <base target="_blank">
 </head>
 <body>
-<div style="height:100px">
-  <a href="face.jpg" target="_self">
-    <img src="face.jpg" alt="Me!" style="height:100px;float:left;padding-right:4px">
+
+<div id="header">
+  <a href="im/face.jpg" target="_self">
+    <img src="im/face.jpg" alt="Me!" id="face" />
   </a>
   <h1>Michael Comella</h1>
   <h2>mcomella</h2>
@@ -16,43 +25,43 @@
 <hr />
 
 <p>
-<u>Contact:</u><br>
-<ul>
-  <li>mcomella at cs.brown.edu
-  <li>michael_comella at brown.edu
-</ul>
+  <u>Contact:</u><br>
+  <ul>
+    <li>mcomella at cs.brown.edu
+    <li>michael_comella at brown.edu
+  </ul>
 </p>
 
 <p>
-<u>Web:</u><br>
-<ul>
-  <li><a href="https://www.facebook.com/michael.l.comella">facebook</a>
-  <li><a href="https://www.github.com/mcomella">github</a>
-  <li><a href="https://plus.google.com/117625111230776726274/posts">Google+</a>
+  <u>Web:</u><br>
   <ul>
-    <li><a href="https://plus.google.com/photos/117625111230776726274/albums">Photography</a>
-  </ul>
-  <li>Mozilla
-  <ul>
-    <li>Bugzilla
+    <li><a href="https://www.facebook.com/michael.l.comella">facebook</a>
+    <li><a href="https://www.github.com/mcomella">github</a>
+    <li><a href="https://plus.google.com/117625111230776726274/posts">Google+</a>
     <ul>
-      <li><a href="https://bugzilla.mozilla.org/buglist.cgi?order=Importance;emailtype1=exact;emailassigned_to1=1;query_format=advanced;email1=michael.l.comella%40gmail.com">Assigned bugs</a>
-      <li><a href="https://bugzilla.mozilla.org/buglist.cgi?emailreporter1=1;order=Importance;emailtype1=exact;query_format=advanced;email1=michael.l.comella%40gmail.com">Reported bugs</a>
+      <li><a href="https://plus.google.com/photos/117625111230776726274/albums">Photography</a>
     </ul>
-    <li><a href="https://air.mozilla.org/intern-presentation-firefox-for-android-2/">Intern presentation</a>
+    <li>Mozilla
     <ul>
-      <li><a href="https://github.com/mcomella/moz_intern">Slides and links</a>
+      <li>Bugzilla
+      <ul>
+        <li><a href="https://bugzilla.mozilla.org/buglist.cgi?order=Importance;emailtype1=exact;emailassigned_to1=1;query_format=advanced;email1=michael.l.comella%40gmail.com">Assigned bugs</a>
+        <li><a href="https://bugzilla.mozilla.org/buglist.cgi?emailreporter1=1;order=Importance;emailtype1=exact;query_format=advanced;email1=michael.l.comella%40gmail.com">Reported bugs</a>
+      </ul>
+      <li><a href="https://air.mozilla.org/intern-presentation-firefox-for-android-2/">Intern presentation</a>
+      <ul>
+        <li><a href="https://github.com/mcomella/moz_intern">Slides and links</a>
+      </ul>
+      <li><a href="https://wiki.mozilla.org/Special:Contributions/Mcomella">Wiki contributions</a>
     </ul>
-    <li><a href="https://wiki.mozilla.org/Special:Contributions/Mcomella">Wiki contributions</a>
+    <li><a href="https://twitter.com/#!/michaelcomella">Twitter</a>
+    <li>Wikipedia
+    <ul>
+      <li><a href="https://en.wikipedia.org/wiki/Special:Contributions/Michaelcomella">Contributions</a>
+      <li><a href="https://en.wikipedia.org/wiki/User:Michaelcomella">User page</a>
+      <li><a href="https://commons.wikimedia.org/wiki/Special:Contributions/Michaelcomella">Wikimedia Commons contributions</a>
+    </ul>
   </ul>
-  <li><a href="https://twitter.com/#!/michaelcomella">Twitter</a>
-  <li>Wikipedia
-  <ul>
-    <li><a href="https://en.wikipedia.org/wiki/Special:Contributions/Michaelcomella">Contributions</a>
-    <li><a href="https://en.wikipedia.org/wiki/User:Michaelcomella">User page</a>
-    <li><a href="https://commons.wikimedia.org/wiki/Special:Contributions/Michaelcomella">Wikimedia Commons contributions</a>
-  </ul>
-</ul>
 </p>
 
 <p>
