Add intro text and remove construction note.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
 <hr />
 
 <p>
+  Hello! My name is Michael Comella and I'm currently a senior at Brown
+  University, majoring in Computer Science. For now, this page is hacked
+  together just so it exists. It will be more robust in the future.
+</p>
+
+<p>
   <u>Contact:</u><br>
   <ul>
     <li>mcomella at cs.brown.edu
@@ -62,10 +68,6 @@
       <li><a href="https://commons.wikimedia.org/wiki/Special:Contributions/Michaelcomella">Wikimedia Commons contributions</a>
     </ul>
   </ul>
-</p>
-
-<p>
-  <strong>Note:</strong> This page is hacked together just so it exists. It'll be more robust in the future.
 </p>
 
 <hr />
