--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 </head>
 <body>
 
+<div id="site">
+
 <div id="header">
   <a href="im/face.jpg" target="_self">
     <img src="im/face.jpg" alt="Me!" id="face" />
@@ -71,6 +73,8 @@
 </p>
 
 <hr />
+
+</div> <!-- site -->
 
 </body>
 </html>
