Set viewport to device width and updated meta tags.

--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="en-us">
 <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width">
   <meta name="author" content="Michael Comella" />
-  <meta name="description" content="Personal page of Michael Comella (mcomella), developer and student at Brown University." />
+  <meta name="description" content="The personal page of Michael Comella (mcomella), developer and student at Brown University." />
   <meta name="keywords" content="student, developer, michael, comella, mcomella" />
   <meta name="google-site-verification" content="CirUfL-R7Ukr5vxRVvqwcDkZTAzyNhP7dXMlJnKb4NU" />
 
   <link rel="stylesheet" type="text/css" href="css/style.css" />
 
-  <title>mcomella</title>
+  <title>Michael Comella</title>
 
   <base target="_blank">
 </head>
