Close meta viewport tag.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width" />
   <meta name="author" content="Michael Comella" />
   <meta name="description" content="The personal page of Michael Comella (mcomella), developer and student at Brown University." />
   <meta name="keywords" content="student, developer, michael, comella, mcomella" />
