--- a/index.html
+++ b/index.html
@@ -10,21 +10,31 @@
 
   <link rel="stylesheet" type="text/css" href="css/style.css" />
 
-  <title>mcomella</title>
+  <title>mcomella.me</title>
 </head>
 <body>
 <section id="site" class="center">
 
 <header id="main_nav" class="inverted">
   <a href="im/face.jpg"><img src="im/face.jpg" alt="Me!" id="face" /></a>
-  <a href="index.html"><h1>mcomella</h1></a>
+  <h1 id="title"><a href="index.html">mcomella.me:~/&nbsp;$</a></h1>
+  <nav id="main_nav_links">
+    <ul>
+      <li>./<a href="learn.html">learn</a>
+      <li>./<a href="work.html">work</a>
+      <li>./<a href="play.html">play</a>
+      <li>./<a href="share.html">share</a>
+      <li>./<a href="live.html">live</a>
+    </ul>
+  </nav>
 </header> <!-- main_nav -->
 
 <section id="content">
   <p>
     Hello! My name is Michael Comella and I'm currently a senior at Brown
-    University, majoring in Computer Science. For now, this page is hacked
-    together just so it exists. It will be more robust in the future.
+    University, majoring in Computer Science. Please excuse this page's flaws as
+    it is not yet complete - I felt it was more important for it to exist than
+    for it to be flawless.
   </p>
 
   <p>
@@ -70,6 +80,7 @@
 </section> <!-- content -->
 
 <hr />
+<!-- TODO: Add footer for balance. (C)? -->
 
 </section> <!-- site -->
 </body>
