Moved style.css to mcomella.css.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="student, developer, michael, comella, mcomella" />
   <meta name="google-site-verification" content="CirUfL-R7Ukr5vxRVvqwcDkZTAzyNhP7dXMlJnKb4NU" />
 
-  <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <link rel="stylesheet" type="text/css" href="css/mcomella.css" />
 
   <title>mcomella.me</title>
 </head>
