Update intro text to be more welcoming.

--- a/index.html
+++ b/index.html
@@ -32,9 +32,14 @@
 <section id="content">
   <p>
     Hello! My name is Michael Comella and I'm currently a senior at Brown
-    University, majoring in Computer Science. Please excuse this page's flaws as
-    it is not yet complete - I felt it was more important for it to exist than
-    for it to be flawless.
+    University, majoring in Computer Science. This page is currently under
+    development so please excuse anything that is not perfect (like how those
+    header links up there take you nowhere, fast!).
+  </p>
+
+  <p>
+    Below you will find some external links to my activity on the web. Please
+    enjoy! ^_^
   </p>
 
   <p>
