Made the TODO pages more robust.

--- a/play.html
+++ b/play.html
@@ -1,6 +1,22 @@
 <!doctype html>
-<html>
+<html lang="en-us">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width" />
+  <meta name="author" content="Michael Comella" />
+  <link rel="stylesheet" type="text/css" href="css/mcomella.css" />
+
+  <title>mcomella.me/play</title>
+</head>
 <body>
-TODO
+
+<p>
+TODO: This page.
+</p>
+
+<p>
+<a href="index.html">Back</a>
+</p>
+
 </body>
 </html>
