Create Wikimedia Commons bullet and add uploads.

--- a/index.html
+++ b/index.html
@@ -77,7 +77,11 @@
       <ul>
         <li><a href="https://en.wikipedia.org/wiki/Special:Contributions/Michaelcomella">Contributions</a>
         <li><a href="https://en.wikipedia.org/wiki/User:Michaelcomella">User page</a>
-        <li><a href="https://commons.wikimedia.org/wiki/Special:Contributions/Michaelcomella">Wikimedia Commons contributions</a>
+        <li>Wikimedia Commons
+        <ul>
+            <li><a href="https://commons.wikimedia.org/wiki/Special:Contributions/Michaelcomella">Contributions</a>
+            <li><a href="https://commons.wikimedia.org/wiki/Special:ListFiles/Michaelcomella">Uploads</a>
+        </ul>
       </ul>
     </ul>
   </p>
