Create original site in jekyll.

--- a/index.html
+++ b/index.html
@@ -1,18 +1,7 @@
-<!doctype html>
-<html lang="en-us">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width" />
-  <meta name="author" content="Michael Comella" />
-  <meta name="description" content="The personal page of Michael Comella (mcomella), developer and student at Brown University." />
-  <meta name="keywords" content="student, developer, michael, comella, mcomella" />
-  <meta name="google-site-verification" content="CirUfL-R7Ukr5vxRVvqwcDkZTAzyNhP7dXMlJnKb4NU" />
-
-  <link rel="stylesheet" type="text/css" href="css/mcomella.css" />
-
-  <title>mcomella.me</title>
-</head>
-<body>
+---
+layout: default
+location: index
+---
 <section id="site" class="center">
 
 <header id="main_nav" class="inverted">
@@ -98,5 +87,3 @@
 <!-- TODO: Add footer for balance. (C)? -->
 
 </section> <!-- site -->
-</body>
-</html>
