--- a/index.html
+++ b/index.html
@@ -7,23 +7,13 @@ location: index
 <header id="main_nav" class="inverted">
   <a href="im/face.jpg"><img src="im/face.jpg" alt="Me!" id="face" /></a>
   <h1 id="title"><a href="index.html">mcomella.me:~/&nbsp;$</a></h1>
-  <nav id="main_nav_links">
-    <ul>
-      <li>./<a href="learn.html">learn</a>
-      <li>./<a href="work.html">work</a>
-      <li>./<a href="play.html">play</a>
-      <li>./<a href="share.html">share</a>
-      <li>./<a href="live.html">live</a>
-    </ul>
-  </nav>
 </header> <!-- main_nav -->
 
 <section id="content">
   <p>
     Hello! My name is Michael Comella and I'm currently a senior at Brown
     University, majoring in Computer Science. This page is currently under
-    development so please excuse anything that is not perfect (like how those
-    header links up there take you nowhere, fast!).
+    development so please excuse the imperfection.
   </p>
 
   <p>
