Move css/ and im/ to res/.
Update appropriate URIs.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ location: index
 <section id="site" class="center">
 
 <header id="main_nav" class="inverted">
-  <a href="im/face.jpg"><img src="im/face.jpg" alt="Me!" id="face" /></a>
+  <a href="res/im/face.jpg"><img src="res/im/face.jpg" alt="Me!" id="face" /></a>
   <h1 id="title"><a href="index.html">mcomella.me:~/&nbsp;$</a></h1>
 </header> <!-- main_nav -->
 
