--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
 
-  <link rel="stylesheet" type="text/css" href="css/mcomella.css" />
+  <link rel="stylesheet" type="text/css" href="res/css/mcomella.css" />
 
   <title>mcomella.me - 404: Not Found</title>
 </head>
