Blank index page.

--- a/index.html
+++ b/index.html
@@ -1,75 +1,8 @@
 ---
-layout: default
+layout: info
 location: index
+title: blog
 ---
-<header id="main_nav" class="inverted">
-  <a href="res/im/face.jpg"><img src="res/im/face.jpg" alt="Me!" id="face" /></a>
-  <h1 id="title"><a href="index.html">mcomella.me:~/&nbsp;$</a></h1>
-</header> <!-- main_nav -->
-
-<section id="content">
-  <p>
-    Hello! My name is Michael Comella and I'm currently a senior at Brown
-    University, majoring in Computer Science. This page is currently under
-    development so please excuse the imperfection.
-  </p>
-
-  <p>
-    Below you will find some external links to my activity on the web. Please
-    enjoy! ^_^
-  </p>
-
-  <p>
-    <u>Contact:</u><br>
-    <ul>
-      <li>mcomella at cs.brown.edu
-      <li>michael_comella at brown.edu
-    </ul>
-  </p>
-
-  <p>
-    <u>Web:</u><br>
-    <ul>
-      <li><a href="https://www.facebook.com/michael.l.comella">facebook</a>
-      <li><a href="https://www.github.com/mcomella">github</a>
-      <li><a href="https://plus.google.com/117625111230776726274/posts">Google+</a>
-      <ul>
-        <li><a href="https://plus.google.com/photos/117625111230776726274/albums">Photography</a>
-      </ul>
-      <li>Mozilla
-      <ul>
-        <li>Bugzilla
-        <ul>
-          <li><a href="https://bugzilla.mozilla.org/buglist.cgi?order=Importance;emailtype1=exact;emailassigned_to1=1;query_format=advanced;email1=michael.l.comella%40gmail.com">Assigned bugs</a>
-          <li><a href="https://bugzilla.mozilla.org/buglist.cgi?emailreporter1=1;order=Importance;emailtype1=exact;query_format=advanced;email1=michael.l.comella%40gmail.com">Reported bugs</a>
-        </ul>
-        <li><a href="https://air.mozilla.org/intern-presentation-firefox-for-android-2/">Intern presentation</a>
-        <ul>
-          <li><a href="https://github.com/mcomella/moz_intern">Slides and links</a>
-        </ul>
-        <li><a href="https://wiki.mozilla.org/Special:Contributions/Mcomella">Wiki contributions</a>
-      </ul>
-      <li><a href="https://twitter.com/#!/michaelcomella">Twitter</a>
-      <li>Wikipedia
-      <ul>
-        <li><a href="https://en.wikipedia.org/wiki/Special:Contributions/Michaelcomella">Contributions</a>
-        <ul>
-            <li><a href="https://ko.wikipedia.org/wiki/%ED%8A%B9%EC%88%98%EA%B8%B0%EB%8A%A5:%EA%B8%B0%EC%97%AC/Michaelcomella">한국어 (Korean)</a>
-        </ul>
-        <li><a href="https://en.wikipedia.org/wiki/User:Michaelcomella">User page</a>
-        <ul>
-            <li><a href="https://ko.wikipedia.org/wiki/사용자:Michaelcomella">한국어 (Korean)</a>
-        </ul>
-        <li>Wikimedia Commons
-        <ul>
-            <li><a href="https://commons.wikimedia.org/wiki/Special:Contributions/Michaelcomella">Contributions</a>
-            <li><a href="https://commons.wikimedia.org/wiki/Special:ListFiles/Michaelcomella">Uploads</a>
-        </ul>
-      </ul>
-    </ul>
-  </p>
-
-</section> <!-- content -->
-
-<hr />
-<!-- TODO: Add footer for balance. (C)? -->
+<p>
+  No articles have been published yet.
+</p>
