--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ location: index
 title: blog
 ---
 {% if site.posts.size != 0 %}
-  <ul>
+  <ul id="post-list">
     {% for post in site.posts %}
       <li>{{ post.date | date: "%d %b %Y" }}&nbsp;&ndash; <a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
