Add styles to 404.

--- a/404.html
+++ b/404.html
@@ -2,6 +2,9 @@
 layout: default
 title: 404
 ---
-<p>Uh oh! The page you were looking for was not found.</p>
+<!-- TODO: Not an about-container, but hey the style works! -->
+<div class="content about-container">
+    <p>Uh oh! The page you were looking for was not found.</p>
 
-<strong><a href="/index.html">Return home</a></strong>
+    <strong><a href="/index.html">Return home</a></strong>
+</div>
