--- a/404.html
+++ b/404.html
@@ -2,8 +2,7 @@
 layout: default
 title: 404
 ---
-<!-- TODO: Not an about-container, but hey the style works! -->
-<div class="content about-container">
+<div class="content four-oh-four">
     <p>Uh oh! The page you were looking for was not found.</p>
 
     <strong><a href="/index.html">Return home</a></strong>
