--- a/app/countup.html
+++ b/app/countup.html
@@ -18,8 +18,12 @@
     <button id="toggle-timer" autofocus>START</button>
 
     <script>
+        const TYPE_STOPPED = 'STOPPED';
+        const TYPE_RUNNING = 'RUNNING';
+
         const elapsedDurationElement = document.getElementById('elapsed-duration');
         const toggleTimerButton = document.getElementById('toggle-timer');
+        const initialStoppedText = toggleTimerButton.innerText;
 
         function speak(msg) {
             const utterance = new SpeechSynthesisUtterance(msg);
@@ -27,35 +31,49 @@
         }
 
         function newStateStopped() {
-            return {type: 'STOPPED'};
+            return {type: TYPE_STOPPED};
         }
 
         function onTick() {
+            // TODO: this counter breaks if the device goes to sleep.
             state.minutesElapsed += 1;
-            elapsedDurationElement.innerText = `${state.minutesElapsed} minutes elapsed`;
+            render(state);
             speak(`${state.minutesElapsed} minutes elapsed`);
         }
 
-        let state = newStateStopped();
-
-        toggleTimerButton.addEventListener('click', (e) => {
-            if (state.type === 'STOPPED') {
-                const timerId = setInterval(onTick, 60 * 1000);
-                state = {
-                    type: 'RUNNING',
-                    minutesElapsed: 0,
-                    timerId,
-                };
-                elapsedDurationElement.innerText = '0 minutes elapsed';
-                toggleTimerButton.innerText = 'STOP';
-            } else if (state.type === 'RUNNING') {
-                speechSynthesis.cancel();
-                clearInterval(state.timerId);
-                state = newStateStopped();
-                elapsedDurationElement.innerText = '';
-                toggleTimerButton.innerText = 'START';
+        function render(state) {
+            let durationText;
+            let toggleTimerButtonText;
+            if (state.type === TYPE_STOPPED) {
+                durationText = '';
+                toggleTimerButtonText = initialStoppedText;
+            } else if (state.type === TYPE_RUNNING) {
+                durationText = `${state.minutesElapsed} minutes elapsed`;
+                toggleTimerButtonText = 'STOP';
             } else {
-                console.error(`toggle button clicked: unknown state.type, ${state.type}`);
+                throw new Error(`unknown state.type: ${state.type}.`);
+            }
+
+            elapsedDurationElement.innerText = durationText;
+            toggleTimerButton.innerText = toggleTimerButtonText;
+        }
+
+        let state = newStateStopped();
+        toggleTimerButton.addEventListener('click', (e) => {
+            if (state.type === TYPE_STOPPED) {
+                state = {
+                    type: TYPE_RUNNING,
+                    minutesElapsed: 0,
+                    timerId: setInterval(onTick, 60 * 1000),
+                };
+                render(state);
+            } else if (state.type === TYPE_RUNNING) {
+                clearInterval(state.timerId);
+                speechSynthesis.cancel();
+                state = newStateStopped();
+                render(state);
+            } else {
+                throw new Error(`toggle button clicked: unknown state.type, ${state.type}`);
             }
         });
     </script>
