--- a/app/countup.html
+++ b/app/countup.html
@@ -35,21 +35,26 @@
             return {type: TYPE_STOPPED};
         }
 
-        function onTick() {
-            // TODO: this counter breaks if the device goes to sleep.
-            state.minutesElapsed += 1;
-            render(state);
-            speak(`${state.minutesElapsed} minutes elapsed`);
+        function getMinutesElapsed(state) {
+            // The system may call tick slightly before or after the interval (I haven't checked the guarantees) so
+            // rounding will get us closest to the time we expect to be at (as opposed to ceil/floor).
+            return Math.round((new Date() - state.startDate) / 1000 / 60);
         }
 
-        function render(state) {
+        function onTick() {
+            const minutesElapsed = getMinutesElapsed(state);
+            render(state, minutesElapsed);
+            speak(`${minutesElapsed} minutes elapsed`);
+        }
+
+        function render(state, optMinutesElapsed) {
             let durationText;
             let toggleTimerButtonText;
             if (state.type === TYPE_STOPPED) {
                 durationText = '';
                 toggleTimerButtonText = initialStoppedText;
             } else if (state.type === TYPE_RUNNING) {
-                durationText = `${state.minutesElapsed} minutes elapsed`;
+                durationText = `${optMinutesElapsed || getMinutesElapsed(state)} minutes elapsed`;
                 toggleTimerButtonText = 'STOP';
             } else {
                 throw new Error(`unknown state.type: ${state.type}.`);
@@ -64,8 +69,8 @@
             if (state.type === TYPE_STOPPED) {
                 state = {
                     type: TYPE_RUNNING,
-                    minutesElapsed: 0,
-                    timerId: setInterval(onTick, 60 * 1000),
+                    startDate: new Date(),
+                    timerId: setInterval(onTick, 60 * 1000), // TODO: since this is called on intervals, it may not run exactly every minute from startDate.
                 };
                 render(state);
                 speak('Count up begin'); // note: iOS Safari requires us to speak on a user interaction before timer-based speech works.
