Change warning announcement in five min warning.

--- a/app/five_minute_warning.html
+++ b/app/five_minute_warning.html
@@ -116,7 +116,7 @@
                     } else if (!state.wasWarningSpoken && now > warningDate) {
                         state.wasWarningSpoken = true;
                         form.style.background = '#fc8';
-                        speak('Five five five five five minutes remaining');
+                        speak('Time to wrap it up! Five minutes remaining.');
                         console.debug('timer: five minutes remaining');
                     }
                 }, 30 * 1000);
